# sandpile

./: LICENSE  README.md  sandpile.cabal
src/: Sandpile.hs
