name:                sandpile
version:             0.1.0.0
synopsis:            Sandpile numbers to image
description:         Please see README.md
homepage:            https://github.com/cfr/sandpile#readme
license:             BSD3
license-file:        LICENSE
author:              Stan Serebryakov
maintainer:          i+sandpile@cfr.pw
copyright:           2017 Stan Serebryakov
category:            Math
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >= 1.10

executable sandpile-exe
  hs-source-dirs:      src
  main-is:             Sandpile.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5,
                       vector,
                       bytestring,
                       JuicyPixels
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/cfr/sandpile
